Atualização: Models (Role) atualizado; DTOs (Role) atualizado; Services (Role) atualizado; Mappers (Role) criado; Controllers (Categoria, Cliente, Endereco, ItemPedido, MetodoPagamento, Pagamento, Pedido, ProcessadorPagamento, Produto, Role, Usuario) criados;